--- a/future_work/our_system.tex
+++ b/future_work/our_system.tex
@@ -1,7 +1,7 @@
 \section{The Future of Our IPS}\label{sec:futureSystem}
 As described in \cref{sec:ourSys} we have been working on building our own IPS. However, it was not possible for us to finish it as we encountered a significant difficulty. The obstacle we encountered was not being able to acquire the RSSI, and thus making it impossible for us to make further meaningful progress on our system within the remaining time limit. We do however believe it would be a fitting and interesting task for future developers.
 
-The first step, if someone is to furtherer develop the system, should be to acquire the RSSI for devices connected to the network. The next step should be to expand the range of attainable devices by allowing multiple access points. From there is should be possible to calculate the distance between each access point based on the signal strength. This calculation can be performed by utilising one of the methods described in \cref{sec:tracking_approach}. By implementing these features it would be possible to calculate the positions of devices on the network, which we believe would be a crucial component of creating the system.
+The first step, if someone is to further develop the system, should be to acquire the RSSI for devices connected to the network. The next step should be to expand the range of attainable devices by allowing multiple access points. Afterwards it should be possible to calculate the distance between each access point based on the signal strength. This calculation can be performed by utilising one of the methods described in \cref{sec:tracking_approach}. By implementing these features it would be possible to calculate the positions of devices on the network, which we believe would be a crucial component of creating the system.
 
 If the described features were implemented, a set of secondary functionality could be considered. The system could be expanded to receive the signal strength for all devices within the networks perimeter, connected or not. This would allow the system to track everyone within its coverage and thereby give it a more accurate view of the area.
-Another beneficial feature the system could support, is be to calculate an estimate of how likely it is that the found locations are correct. This estimate could be similar to that the MSE provides with its \textit{confidenceFactor} described in \cref{sec:class_design}. This estimate will be useful for comparing the system's precision with other systems as descried in \cref{sec:ourSys}.
+Another beneficial feature the system could support, is be to calculate an estimate of how likely it is that the found locations are correct. This estimate could be similar to that the MSE provides with its \textit{confidenceFactor} described in \cref{sec:class_design}. This estimate will be useful for comparing the system's precision with other systems as described in \cref{sec:ourSys}.
