corrected our system

--- a/formalia/forord.tex
+++ b/formalia/forord.tex
@@ -4,7 +4,7 @@
 
 
 In the report source references are presented by a version of the Vancouver system, where sources are indicated by square brackets. An example is [1], where this is the first source in the bibliography.
-Lastly we will like to thank Per Mejdal Rasmussen, administrator of Cisco at AAU, hence referred to as the MSE administrator. And Bin Yang for supervising our project as well as the aSTEP multi-project. 
+Lastly we will like to thank Per Mejdal Rasmussen, administrator of Cisco at AAU, hence referred to as the MSE administrator. We would also like to thank Bin Yang for supervising our project as well as the aSTEP multi-project. 
 
 \begin{multicols}{2}
 \signature{Oliver B. Købsted}
